
  ******************************************************************

                        ChangeLog for Ra-Brix

  ******************************************************************

  ------------------------------------------------------------------

                          Version 0.7.2

  ------------------------------------------------------------------

* Fixed a bug in ViewState serialization process that made multiple
  open windows towards same application crash the ViewState of first 
  window opened.

* Fixed a bug that made multiple default CMS pages be made as 
  headers for the News system.





  ------------------------------------------------------------------

                          Version 0.6.1

  ------------------------------------------------------------------

* Fixed a bug in the SlidingMenu which would make link non-clickable
  in Google Chrome.

* Fixed a bug in the SlidingMenu which would make the BreadCrumb
  show up "twice" and make the design scewed...





  ------------------------------------------------------------------

                          Version 0.4.0

  ------------------------------------------------------------------

* Added more read files with the download such as license.txt etc

* Added support for serializing back and forth between JSON for the
  Ra.Brix.Types.Node structure.

* Support for folders inside the bin folder of the Application Pool
  which can contain Component Packages that'll plug into the 
  portal.
