@@ -104,7 +104,7 @@ namespace InitializeController
         private static void TryToAutoLoginUserFromCookie()
         {
             // We only try to autologin users if settings allows it ...
-            if (Settings.Instance.Get<bool>("RememberUsersAcrossSession", true))
+            if (!Settings.Instance.Get<bool>("RememberUsersAcrossSession", true))
                 return;
 
             // Checking to see if user has logged in before, if he has we "auto login" him...
